--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -1,14 +1,14 @@
 repositories {
     jcenter()
     mavenCentral()
-    maven { url 'http://maven.microblink.com' }
+  //  maven { url 'http://maven.microblink.com' }
 }
 
 dependencies {
-    compile 'androidx.appcompat:appcompat:1.0.2'
-    compile 'androidx.constraintlayout:constraintlayout:1.1.3'
-    compile 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
-    compile 'androidx.recyclerview:recyclerview:1.0.0'
+  // compile 'androidx.appcompat:appcompat:1.0.2'
+  //  compile 'androidx.constraintlayout:constraintlayout:1.1.3'
+  //  compile 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
+  //  compile 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
 
