--- a/plugin.xml
+++ b/plugin.xml
@@ -3,6 +3,11 @@
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Hello</name>
+    
+    <engines>
+        <engine name="cordova" version=">=6.4.0" />
+        <engine name="cordova-android" version=">=6.4.0" />
+    </engines>
 
     <js-module name="Hello" src="www/Hello.js">
         <clobbers target="cordova.plugins.Hello" />
