--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
         </config-file>
 
         <config-file parent="/*" target="res/xml/config.xml">
-            <feature name="Hello">
+            <feature name="MyHello">
                 <param name="android-package" value="com.example.hello.Hello" />
             </feature>
         </config-file>
